headers/tcl86.h

typedef void (Tcl_FreeProc) (char *blockPtr);
typedef int *ClientData;
typedef struct Tcl_Interp
{
    char *result;
    Tcl_FreeProc *freeProc;
    int errorLine;
} Tcl_Interp;
typedef void (Tcl_FreeInternalRepProc) (struct Tcl_Obj *objPtr);
typedef void (Tcl_DupInternalRepProc) (struct Tcl_Obj *srcPtr, struct Tcl_Obj *dupPtr);
typedef void (Tcl_UpdateStringProc) (struct Tcl_Obj *objPtr);
typedef int (Tcl_SetFromAnyProc) (Tcl_Interp *interp, struct Tcl_Obj *objPtr);
typedef struct Tcl_ObjType {
    const char *name;
    Tcl_FreeInternalRepProc *freeIntRepProc;
    Tcl_DupInternalRepProc *dupIntRepProc;
    Tcl_UpdateStringProc *updateStringProc;
    Tcl_SetFromAnyProc *setFromAnyProc;
} Tcl_ObjType;
typedef struct Tcl_Obj {
    int refCount;
    char *bytes;
    int length;
    const Tcl_ObjType *typePtr;
    union {
        long longValue;
        double doubleValue;
        void *otherValuePtr;
        long long wideValue;
        struct {
            void *ptr1;
            void *ptr2;
        } twoPtrValue;
        struct {
            void *ptr;
            unsigned long value;
        } ptrAndLongRep;
    } internalRep;
} Tcl_Obj;
Tcl_Interp* Tcl_CreateInterp(void);
int Tcl_Init(Tcl_Interp *interp);
int Tcl_GetErrorLine(Tcl_Interp *interp);
int Tcl_GetErrno(void);
//EXTERN CONST84_RETURN char * Tcl_ErrnoId(void);
//128
//EXTERN CONST84_RETURN char * Tcl_ErrnoMsg(int err);

int Tcl_Eval(Tcl_Interp *interp, const char *script);
int Tcl_EvalObj(Tcl_Interp *interp, Tcl_Obj *objPtr);
Tcl_Obj *Tcl_GetObjResult(Tcl_Interp *interp);
const char *Tcl_GetString(Tcl_Obj *objPtr);
Tcl_Obj *Tcl_DuplicateObj(Tcl_Obj *objPtr);
void TclFreeObj(Tcl_Obj *objPtr);
int Tcl_GetBoolean(Tcl_Interp *interp, const char *src, int *boolPtr);
int Tcl_GetBooleanFromObj(Tcl_Interp *interp, Tcl_Obj *objPtr, int *boolPtr);
unsigned char *Tcl_GetByteArrayFromObj(Tcl_Obj *objPtr, int *lengthPtr);
int Tcl_GetDouble(Tcl_Interp *interp, const char *src, double *doublePtr);
int Tcl_GetDoubleFromObj(Tcl_Interp *interp, Tcl_Obj *objPtr, double *doublePtr);
int Tcl_GetIndexFromObj(Tcl_Interp *interp, Tcl_Obj *objPtr,
	    const char *const *tablePtr, const char *msg, int flags, int *indexPtr);
int Tcl_GetInt(Tcl_Interp *interp, const char *src, int *intPtr);
int Tcl_GetIntFromObj(Tcl_Interp *interp, Tcl_Obj *objPtr, int *intPtr);
int Tcl_GetLongFromObj(Tcl_Interp *interp, Tcl_Obj *objPtr, long *longPtr);
const Tcl_ObjType *Tcl_GetObjType(const char *typeName);
const char *Tcl_GetStringFromObj(Tcl_Obj *objPtr, int *lengthPtr);
void Tcl_InvalidateStringRep(Tcl_Obj *objPtr);
int Tcl_ListObjAppendList(Tcl_Interp *interp, Tcl_Obj *listPtr, Tcl_Obj *elemListPtr);
int Tcl_ListObjAppendElement(Tcl_Interp *interp, Tcl_Obj *listPtr, Tcl_Obj *objPtr);
void TclFreeObj(Tcl_Obj *objPtr);
typedef int (Tcl_ObjCmdProc) (ClientData clientData, Tcl_Interp *interp,
	int objc, struct Tcl_Obj *const *objv);
typedef void (Tcl_CmdDeleteProc) (ClientData clientData);