lib/src/tcl_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: non_constant_identifier_names, camel_case_types, avoid_private_typedef_functions, require_trailing_commas, constant_identifier_names

import 'dart:ffi' as ffi;

/// Bindings to Tcl
class TclBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TclBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TclBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// creates a new interpreter structure and returns a token for it
  ffi.Pointer<Tcl_Interp> Tcl_CreateInterp() {
    return _Tcl_CreateInterp();
  }

  late final _Tcl_CreateInterp_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_CreateInterp>>('Tcl_CreateInterp');
  late final _dart_Tcl_CreateInterp _Tcl_CreateInterp =
      _Tcl_CreateInterp_ptr.asFunction<_dart_Tcl_CreateInterp>();

  int Tcl_Init(
    ffi.Pointer<Tcl_Interp> interp,
  ) {
    return _Tcl_Init(
      interp,
    );
  }

  late final _Tcl_Init_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_Init>>('Tcl_Init');

  late final _dart_Tcl_Init _Tcl_Init =
      _Tcl_Init_ptr.asFunction<_dart_Tcl_Init>();

  int Tcl_GetErrorLine(
    ffi.Pointer<Tcl_Interp> interp,
  ) {
    return _Tcl_GetErrorLine(
      interp,
    );
  }

  late final _Tcl_GetErrorLine_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetErrorLine>>('Tcl_GetErrorLine');

  late final _dart_Tcl_GetErrorLine _Tcl_GetErrorLine =
      _Tcl_GetErrorLine_ptr.asFunction<_dart_Tcl_GetErrorLine>();

  /// const char * Tcl_ErrnoMsg(errorCode)
  /// Tcl_ErrnoId and Tcl_ErrnoMsg return string representations of errno values.
  ///  Tcl_ErrnoId returns a machine-readable textual identifier such as "EACCES" 
  /// that corresponds to the current value of errno. 
  /// Tcl_ErrnoMsg returns a human-readable string such as "permission denied" 
  /// that corresponds to the value of its errorCode argument. 
  /// The errorCode argument is typically the value returned by Tcl_GetErrno.
  ///  The strings returned by these functions are statically allocated and
  ///  the caller must not free or modify them.
  ffi.Pointer<ffi.Int8> Tcl_ErrnoMsg(int err) {
    return _Tcl_ErrnoMsg(err);
  }

  late final _Tcl_ErrnoMsg_ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(ffi.Int32)>>(
          'Tcl_ErrnoMsg');

  late final ffi.Pointer<ffi.Int8> Function(int) _Tcl_ErrnoMsg =
      _Tcl_ErrnoMsg_ptr.asFunction<ffi.Pointer<ffi.Int8> Function(int)>();

  int Tcl_GetErrno() {
    return _Tcl_GetErrno();
  }

  late final _Tcl_GetErrno_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetErrno>>('Tcl_GetErrno');
  late final _dart_Tcl_GetErrno _Tcl_GetErrno =
      _Tcl_GetErrno_ptr.asFunction<_dart_Tcl_GetErrno>();

  int Tcl_Eval(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> script,
  ) {
    return _Tcl_Eval(
      interp,
      script,
    );
  }

  late final _Tcl_Eval_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_Eval>>('Tcl_Eval');
  late final _dart_Tcl_Eval _Tcl_Eval =
      _Tcl_Eval_ptr.asFunction<_dart_Tcl_Eval>();

  int Tcl_EvalObj(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> objPtr,
  ) {
    return _Tcl_EvalObj(
      interp,
      objPtr,
    );
  }

  late final _Tcl_EvalObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_EvalObj>>('Tcl_EvalObj');
  late final _dart_Tcl_EvalObj _Tcl_EvalObj =
      _Tcl_EvalObj_ptr.asFunction<_dart_Tcl_EvalObj>();

  ffi.Pointer<Tcl_Obj> Tcl_GetObjResult(
    ffi.Pointer<Tcl_Interp> interp,
  ) {
    return _Tcl_GetObjResult(
      interp,
    );
  }

  late final _Tcl_GetObjResult_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetObjResult>>('Tcl_GetObjResult');
  late final _dart_Tcl_GetObjResult _Tcl_GetObjResult =
      _Tcl_GetObjResult_ptr.asFunction<_dart_Tcl_GetObjResult>();

  ffi.Pointer<ffi.Int8> Tcl_GetString(
    ffi.Pointer<Tcl_Obj> objPtr,
  ) {
    return _Tcl_GetString(
      objPtr,
    );
  }

  late final _Tcl_GetString_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetString>>('Tcl_GetString');
  late final _dart_Tcl_GetString _Tcl_GetString =
      _Tcl_GetString_ptr.asFunction<_dart_Tcl_GetString>();

  ffi.Pointer<Tcl_Obj> Tcl_DuplicateObj(
    ffi.Pointer<Tcl_Obj> objPtr,
  ) {
    return _Tcl_DuplicateObj(
      objPtr,
    );
  }

  late final _Tcl_DuplicateObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_DuplicateObj>>('Tcl_DuplicateObj');
  late final _dart_Tcl_DuplicateObj _Tcl_DuplicateObj =
      _Tcl_DuplicateObj_ptr.asFunction<_dart_Tcl_DuplicateObj>();

  void TclFreeObj(
    ffi.Pointer<Tcl_Obj> objPtr,
  ) {
    return _TclFreeObj(
      objPtr,
    );
  }

  late final _TclFreeObj_ptr =
      _lookup<ffi.NativeFunction<_c_TclFreeObj>>('TclFreeObj');
  late final _dart_TclFreeObj _TclFreeObj =
      _TclFreeObj_ptr.asFunction<_dart_TclFreeObj>();

  int Tcl_GetBoolean(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> src,
    ffi.Pointer<ffi.Int32> boolPtr,
  ) {
    return _Tcl_GetBoolean(
      interp,
      src,
      boolPtr,
    );
  }

  late final _Tcl_GetBoolean_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetBoolean>>('Tcl_GetBoolean');
  late final _dart_Tcl_GetBoolean _Tcl_GetBoolean =
      _Tcl_GetBoolean_ptr.asFunction<_dart_Tcl_GetBoolean>();

  int Tcl_GetBooleanFromObj(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Int32> boolPtr,
  ) {
    return _Tcl_GetBooleanFromObj(
      interp,
      objPtr,
      boolPtr,
    );
  }

  late final _Tcl_GetBooleanFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetBooleanFromObj>>(
          'Tcl_GetBooleanFromObj');
  late final _dart_Tcl_GetBooleanFromObj _Tcl_GetBooleanFromObj =
      _Tcl_GetBooleanFromObj_ptr.asFunction<_dart_Tcl_GetBooleanFromObj>();

  ffi.Pointer<ffi.Uint8> Tcl_GetByteArrayFromObj(
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Int32> lengthPtr,
  ) {
    return _Tcl_GetByteArrayFromObj(
      objPtr,
      lengthPtr,
    );
  }

  late final _Tcl_GetByteArrayFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetByteArrayFromObj>>(
          'Tcl_GetByteArrayFromObj');
  late final _dart_Tcl_GetByteArrayFromObj _Tcl_GetByteArrayFromObj =
      _Tcl_GetByteArrayFromObj_ptr.asFunction<_dart_Tcl_GetByteArrayFromObj>();

  int Tcl_GetDouble(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> src,
    ffi.Pointer<ffi.Double> doublePtr,
  ) {
    return _Tcl_GetDouble(
      interp,
      src,
      doublePtr,
    );
  }

  late final _Tcl_GetDouble_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetDouble>>('Tcl_GetDouble');
  late final _dart_Tcl_GetDouble _Tcl_GetDouble =
      _Tcl_GetDouble_ptr.asFunction<_dart_Tcl_GetDouble>();

  int Tcl_GetDoubleFromObj(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Double> doublePtr,
  ) {
    return _Tcl_GetDoubleFromObj(
      interp,
      objPtr,
      doublePtr,
    );
  }

  late final _Tcl_GetDoubleFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetDoubleFromObj>>(
          'Tcl_GetDoubleFromObj');
  late final _dart_Tcl_GetDoubleFromObj _Tcl_GetDoubleFromObj =
      _Tcl_GetDoubleFromObj_ptr.asFunction<_dart_Tcl_GetDoubleFromObj>();

  int Tcl_GetIndexFromObj(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> tablePtr,
    ffi.Pointer<ffi.Int8> msg,
    int flags,
    ffi.Pointer<ffi.Int32> indexPtr,
  ) {
    return _Tcl_GetIndexFromObj(
      interp,
      objPtr,
      tablePtr,
      msg,
      flags,
      indexPtr,
    );
  }

  late final _Tcl_GetIndexFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetIndexFromObj>>(
          'Tcl_GetIndexFromObj');
  late final _dart_Tcl_GetIndexFromObj _Tcl_GetIndexFromObj =
      _Tcl_GetIndexFromObj_ptr.asFunction<_dart_Tcl_GetIndexFromObj>();

  int Tcl_GetInt(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> src,
    ffi.Pointer<ffi.Int32> intPtr,
  ) {
    return _Tcl_GetInt(
      interp,
      src,
      intPtr,
    );
  }

  late final _Tcl_GetInt_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetInt>>('Tcl_GetInt');
  late final _dart_Tcl_GetInt _Tcl_GetInt =
      _Tcl_GetInt_ptr.asFunction<_dart_Tcl_GetInt>();

  int Tcl_GetIntFromObj(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Int32> intPtr,
  ) {
    return _Tcl_GetIntFromObj(
      interp,
      objPtr,
      intPtr,
    );
  }

  late final _Tcl_GetIntFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetIntFromObj>>('Tcl_GetIntFromObj');
  late final _dart_Tcl_GetIntFromObj _Tcl_GetIntFromObj =
      _Tcl_GetIntFromObj_ptr.asFunction<_dart_Tcl_GetIntFromObj>();

  int Tcl_GetLongFromObj(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Int64> longPtr,
  ) {
    return _Tcl_GetLongFromObj(
      interp,
      objPtr,
      longPtr,
    );
  }

  late final _Tcl_GetLongFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetLongFromObj>>('Tcl_GetLongFromObj');
  late final _dart_Tcl_GetLongFromObj _Tcl_GetLongFromObj =
      _Tcl_GetLongFromObj_ptr.asFunction<_dart_Tcl_GetLongFromObj>();

  ffi.Pointer<Tcl_ObjType> Tcl_GetObjType(
    ffi.Pointer<ffi.Int8> typeName,
  ) {
    return _Tcl_GetObjType(
      typeName,
    );
  }

  late final _Tcl_GetObjType_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetObjType>>('Tcl_GetObjType');
  late final _dart_Tcl_GetObjType _Tcl_GetObjType =
      _Tcl_GetObjType_ptr.asFunction<_dart_Tcl_GetObjType>();

  ffi.Pointer<ffi.Int8> Tcl_GetStringFromObj(
    ffi.Pointer<Tcl_Obj> objPtr,
    ffi.Pointer<ffi.Int32> lengthPtr,
  ) {
    return _Tcl_GetStringFromObj(
      objPtr,
      lengthPtr,
    );
  }

  late final _Tcl_GetStringFromObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetStringFromObj>>(
          'Tcl_GetStringFromObj');
  late final _dart_Tcl_GetStringFromObj _Tcl_GetStringFromObj =
      _Tcl_GetStringFromObj_ptr.asFunction<_dart_Tcl_GetStringFromObj>();

  void Tcl_InvalidateStringRep(
    ffi.Pointer<Tcl_Obj> objPtr,
  ) {
    return _Tcl_InvalidateStringRep(
      objPtr,
    );
  }

  late final _Tcl_InvalidateStringRep_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_InvalidateStringRep>>(
          'Tcl_InvalidateStringRep');
  late final _dart_Tcl_InvalidateStringRep _Tcl_InvalidateStringRep =
      _Tcl_InvalidateStringRep_ptr.asFunction<_dart_Tcl_InvalidateStringRep>();

  int Tcl_ListObjAppendList(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> listPtr,
    ffi.Pointer<Tcl_Obj> elemListPtr,
  ) {
    return _Tcl_ListObjAppendList(
      interp,
      listPtr,
      elemListPtr,
    );
  }

  late final _Tcl_ListObjAppendList_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ListObjAppendList>>(
          'Tcl_ListObjAppendList');
  late final _dart_Tcl_ListObjAppendList _Tcl_ListObjAppendList =
      _Tcl_ListObjAppendList_ptr.asFunction<_dart_Tcl_ListObjAppendList>();

  int Tcl_ListObjAppendElement(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> listPtr,
    ffi.Pointer<Tcl_Obj> objPtr,
  ) {
    return _Tcl_ListObjAppendElement(
      interp,
      listPtr,
      objPtr,
    );
  }

  late final _Tcl_ListObjAppendElement_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ListObjAppendElement>>(
          'Tcl_ListObjAppendElement');
  late final _dart_Tcl_ListObjAppendElement _Tcl_ListObjAppendElement =
      _Tcl_ListObjAppendElement_ptr.asFunction<
          _dart_Tcl_ListObjAppendElement>();
